' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
' Copyright (C) 2019 - present Botan Coban
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml Anwendungskern

interface Promise<T>

package @nestjs/common {
  class "@Injectable" as Injectable
  hide Injectable circle
}

package universitaet {
  package entity {
    class Universitaet
  }

  package service #DDDDDD {
    class QueryBuilder

    class UniversitaetReadService << control >> <<@Injectable()>> {
      + async findAll(): Promise<Universitaet[]>
      + async findByID(id: number): Promise<Universitaet | undefined>
    }

    UniversitaetReadService o--> "1" QueryBuilder : queryBuilder
    UniversitaetReadService .up.> Injectable
    UniversitaetReadService .up.> Promise
    UniversitaetReadService ..> Universitaet
  }
}

hide empty members

footer (c) Botan Coban

@enduml
